added the ability to edit the profile

--- a/src/components/profile/profile-info/profile-info.module.css
+++ b/src/components/profile/profile-info/profile-info.module.css
@@ -8,3 +8,16 @@
     height: 200px;
 }
 
+.descriptionBlock {
+    padding: 10px;
+}
+
+.mainPhoto {
+    max-width: 200px;
+}
+
+.contact {
+    padding-left: 10px;
+}
+
+
