--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,4 +1,4 @@
-.header{
+/* .header{
     grid-area: h;
     background-color:#4C3B4D;
 }
@@ -14,4 +14,4 @@ header img{
 
 .loginBlock a {
     color: white;
-}
+} */
