--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,4 +1,4 @@
-.appWrapper{
+/* .appWrapper{
     margin: 0 auto;
     display: grid;
     width: 1200px;
@@ -15,4 +15,5 @@
 .appWrapper .content {
         grid-area: c;
         background-color:  #FFEEDB;
-}
+} */
+
