--- a/src/components/profile/my-posts/my-posts.css
+++ b/src/components/profile/my-posts/my-posts.css
@@ -1,5 +1,9 @@
 .myPosts {
-    padding: 10px;
+    padding: 40px;
+}
+
+.hd-inp {
+    margin-left: 40px;
 }
 
 .button {
@@ -10,3 +14,8 @@
     margin-top: 60px;
     margin-bottom: 20px;
 }
+
+.mp-header {
+    margin-bottom: 40px;
+}
+
